# actix-minimal

./: Cargo.toml  README.md
src/: main.rs  startup.rs
src/routes/: index.rs  not_found.rs
tests/: test_index.rs
tests/fixtures/: spawn_app.rs
