[package]
name = "actix-minimal"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_starter"

[dependencies]
actix-web = "4"
lexopt = "0.3.0"
env_logger = "0.10.1"
serde = { version = "1.0.192", features = ["derive"] }


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"]}
tokio = "1.32.0"
scraper = "0.17.1"

